[package]
name = "mintdb"
version = "0.1.0"
edition = "2024"

[lib]
name = "mintdb"
path = "src/lib.rs"

[[bin]]
name = "mintdb-cli"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
bytes = { version = "1.11.0", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "unicode", "env"] }
futures-lite = "2.6.1"
glommio = "0.9.0"
intrusive-collections = "0.9.7"
memmap2 = "0.9.9"
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["use-std", "use-crc"] }
procfs = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
